[package]
name = "md-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["full"] }
pulldown-cmark = "0.11"
percent-encoding = "2.3"
mime_guess = "2.0"
clap = { version = "4.5", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"